--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 *    {font-family: sans-serif;}
+body {background-color: #0e0e0e;}
 h1   {text-align: center;color: rgb(8, 137, 197);
      font-size: 50px;}
 
