--- a/style.css
+++ b/style.css
@@ -2,3 +2,4 @@
 a {text-decoration: none;color: rgb(0, 110, 255);
     font-size: 25px;border: 10px groove rgb(0, 102, 255);
  border-radius: 10px;}
+ h1 {text-align: center;color: rgb(0, 91, 177);}
