--- a/calculadora/style.css
+++ b/calculadora/style.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+body {background-color: #2b2b2b;}
 h1 {text-align: center;}
 label {margin: 10px;}
 input {margin: 10px;border: 2px solid rgb(45, 45, 206);border-radius: 10px;width: 200px;}
