--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+body {background-color: #2b2b2b;}
 a {text-decoration: none;color: rgb(0, 110, 255);
     font-size: 25px;border: 10px groove rgb(0, 102, 255);
  border-radius: 10px;}
