--- a/tela-inicial.css
+++ b/tela-inicial.css
@@ -2,5 +2,5 @@
 body {background-color: #2b2b2b;}
 a {text-decoration: none;color: rgb(0, 110, 255);
     font-size: 25px;border: 10px solid rgb(0, 102, 255);
- border-radius: 10px;margin: 10px;}
+ border-radius: 10px;margin: 20px;margin-bottom: 10px;}
  h1 {text-align: center;color: rgb(0, 91, 177);}
