--- a/quiz-games/quiz-games.css
+++ b/quiz-games/quiz-games.css
@@ -29,3 +29,4 @@ a {display: none;text-decoration: none;color:rgb(0, 167, 139);
  text-align: center;font-size: 25px;}
 a:hover {color:rgb(0, 102, 85) ;}
 
+img {width: 30px;height: 300px;}
