--- a/quiz-biblico/style.css
+++ b/quiz-biblico/style.css
@@ -2,6 +2,7 @@
 body {background-color: #0e0e0e;}
 h1   {text-align: center;color: rgb(8, 137, 197);
      font-size: 50px;}
+     #ponto {color: rgb(48, 92, 4);}
 
 h2   {
      
