--- a/quiz-games/quiz-games.css
+++ b/quiz-games/quiz-games.css
@@ -25,7 +25,7 @@ main {width: 97%;
  .per:active {color: rgb(0, 88, 161);}
 
 .sumir {display: none;}
-a {display: none;text-decoration: none;color:rgb(0, 167, 139);
+a {text-decoration: none;color:rgb(0, 167, 139);
  text-align: center;font-size: 25px;}
 a:hover {color:rgb(0, 102, 85) ;}
 
