--- a/quiz-games/quiz-games.css
+++ b/quiz-games/quiz-games.css
@@ -30,6 +30,6 @@ a {text-decoration: none;color:rgb(0, 167, 139);
 
 a:hover {color:rgb(0, 102, 85) ;}
 
-span a {display: none;}
+#rodada {display: none;}
 
 img {width: 30px;height: 300px;}
