--- a/filmes-main/filme_comedia/style-comedia.css
+++ b/filmes-main/filme_comedia/style-comedia.css
@@ -1,4 +1,5 @@
 @charset  "UTF-8";
+body {background-color: black;}
 h1 {text-align: center;text-align: inherit;color: cornflowerblue;}
 /* Adicione estas regras CSS para estilizar o h2 */
 h2 {
