--- a/filmes-main/filmes_romantico/style-romantico.css
+++ b/filmes-main/filmes_romantico/style-romantico.css
@@ -1,4 +1,5 @@
 @charset  "UTF-8";
+body {background-color: rgb(88, 0, 49)4);}
 h1 {text-align: center;text-align: initial;color: cornflowerblue;}
 /* Adicione estas regras CSS para estilizar o h2 */
 h2 {
