--- a/filmes-main/filmes_terror/style-terror.css
+++ b/filmes-main/filmes_terror/style-terror.css
@@ -1,4 +1,5 @@
 @charset  "UTF-8";
+body {background-color: black;}
 h1 {text-align: center;text-align: center;}
 /* Adicione estas regras CSS para estilizar o h2 */
 h2 {
