--- a/tela-inicial.css
+++ b/tela-inicial.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 body {background-color: #2b2b2b;}
-a {text-decoration: none;color: rgb(0, 110, 255);
+a {text-align: justify; text-decoration: none;color: rgb(0, 110, 255);
     font-size: 18px;border: 10px solid rgb(0, 102, 255);
  border-radius: 10px;margin: 10px;margin-bottom: 10px;}
  h1 {text-align: center;color: rgb(0, 91, 177);}
