--- a/pregaçoes/precaçao.css
+++ b/pregaçoes/precaçao.css
@@ -1,3 +1,4 @@
 @charset  "UTF-8";
 body {background-color: black;}
 div {text-align: center;}
+a {text-align: inherit;text-decoration: none;font-size: 20px;color: rgb(197, 197, 197);}
