--- a/pregaçoes/precaçao.css
+++ b/pregaçoes/precaçao.css
@@ -2,3 +2,5 @@
 body {background-color: black;}
 div {text-align: center;}
 a {text-align: inherit;text-decoration: none;font-size: 20px;color: rgb(197, 197, 197);}
+h1 {text-align: center;color: rgb(1, 122, 31);}
+h2 {text-align: center;color: rgb(58, 58, 58);}
