--- a/calculadora/style.css
+++ b/calculadora/style.css
@@ -2,6 +2,6 @@
 body {background-color: #2b2b2b;}
 h1 {text-align: center;}
 label {margin: 10px;}
-input {background-color: #2b2b2b; margin: 10px;border: 2px solid rgb(45, 45, 206);border-radius: 10px;width: 200px;}
+input {background-color: #504f4f; margin: 10px;border: 2px solid rgb(45, 45, 206);border-radius: 10px;width: 200px;}
 button {margin: 10px;background-color: rgb(7, 131, 89);color: rgb(0, 0, 0);}
 main {border: 2px solid rgb(15, 129, 163);border-radius: 10px; width: 300px;height: 400px;display: inline-block;}
