--- a/tela-inicial.css
+++ b/tela-inicial.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 body {background-color: #2b2b2b;}
 h2 {color: cornflowerblue;}
+a {text-decoration: none;}
 h2:hover {color: rgb(19, 87, 189);}
  h1 {text-align: center;color: rgb(0, 91, 177);}
