--- a/QUIZ'S/QUIZ.css
+++ b/QUIZ'S/QUIZ.css
@@ -2,4 +2,5 @@
 body {background-color: black;}
 h1 {text-align: center;}
 h2 {color: bisque;}
-img {width: 200;height: 300;border: 1px solid rgb(255, 0, 0); border-radius: 10px;}
+
+img {width: 200px;height: 300px;border: 1px solid rgb(255, 0, 0); border-radius: 10px;}
