--- a/tela-inicial.css
+++ b/tela-inicial.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 body {background-color: #2b2b2b;}
 h2 {color: cornflowerblue;}
-a {text-decoration: none;}
+a {text-decoration: none; border: 2px solid rgb(0, 183, 255);}
 h2:hover {color: rgb(19, 87, 189);}
  h1 {text-align: center;color: rgb(0, 91, 177);}
