--- a/filmes-main/style.css
+++ b/filmes-main/style.css
@@ -9,7 +9,7 @@ h2 {
     border-radius: 8px; /* Adiciona bordas arredondadas */
     margin: 15px;}
 
-    h3 {font-size: 20px;color: rgb(0, 108, 231);}
+    h3 {font-size: 20px;color: rgb(55, 100, 100);}
     .so {width: 70px;}
     img {width: 160px;height: 240px;padding-bottom: 20px;  border: 2px groove red; border-radius: 5px;margin:  10px;}
     img:hover {transform: scale(1.1)}
@@ -54,11 +54,16 @@ h2 {
     header   {text-align: center;padding: 20px;color: rgb(255, 153, 0);background-color: rgb(0, 0, 0);}
     nav {padding: 10px;color: #000000;background-color: #383838; }
     a {text-decoration: none;color: #383838;}
-    
-    #menu {display: rgb(55, 100, 100);font-size: 18px;;}
+    p {display: inline;}
+    #menu {display:inline;color: rgb(55, 100, 100);font-size: 18px;;}
     #sub-menu {display: none;text-decoration: none;}
     #menu:hover {color: rgb(0, 129, 86);}
+    
+    .aparecer {display: none; text-decoration: none;}
+    #passar:hover > .aparecer {display: block;}
+    #passar:hover {color: rgb(0, 129, 86);}
     #menu:hover > #sub-menu {display:block;}
     .de {color: #005825;}
+    h3 { display:inline}
     
     
