--- a/tela-inicial.css
+++ b/tela-inicial.css
@@ -1,6 +1,12 @@
 @charset "UTF-8";
-body {background-color: #2b2b2b;}
-h2 {color: cornflowerblue;}
-a {text-decoration: none; border: 2px solid rgb(0, 183, 255);}
+body {background-color: black;}
+h1 {display: inline;}
+h2 {color: cornflowerblue;display: inline;}
+#menu {display: none;}
 h2:hover {color: rgb(19, 87, 189);}
  h1 {text-align: center;color: rgb(0, 91, 177);}
+ img {border: 2px solid red;border-radius: 50%;
+      width: 150px; height: 150px;}
+ .imagem {text-align: center;}
+ ul {display: flex;justify-content: space-between;}
+ #Projetos:hover >span {display: block;}
