--- a/filmes-main/style.css
+++ b/filmes-main/style.css
@@ -23,22 +23,22 @@ span > p {position: relative;right: -600  ;}
     .seta-fantasia {width: 120px;height: 120px;padding: 0px;border: 0px;}
     .seta-ficção   {width: 120px;height: 120px;padding: 0px;border: 0px;}
   
-    header {padding: 0px;color: rgb(255, 153, 0);background-color: rgb(0, 0, 0);}
-    nav {padding: 10px;color: #000000;background-color: #383838; }
+    header {color: #a76868; padding: 1px;color: rgb(255, 153, 0);background-color: rgb(0, 0, 0);}
+    nav {padding: 10px;color: #242424;background-color: #383838; }
     a {text-decoration: none;color: #383838;}
     p {display: inline;}
     #menu {display:inline;padding: 10px;
     color: rgb(255, 255, 255);font-size: 18px
     ;margin: 0px;cursor: pointer;}
-    #sub-menu {width: 100px; display: none;text-decoration: none;
-    padding-top: 10px; margin-left: 200px;} 
+    #sub-menu{ display: none;text-decoration: none;
+    padding-top: 10px; margin-left: 220px;} 
     #menu:hover {color: rgb(156, 173, 168);}
     #menu:hover > #sub-menu {display: block;}
     .de {color: white;}
 
     #atores {color: aliceblue;font-size: 18px;
-    margin-left: 20px;cursor: pointer;}
-    #atores-sub{display: none;margin-left: 300px;}
+    margin-left: 20px;cursor: pointer;padding: 10px;}
+    #atores-sub{display: none;margin-left: 330px;}
  #atores:hover > #atores-sub {display: inline;}
     h3 { display:inline}
     
