--- a/filmes-main/filmes-desenho/style-desenho.css
+++ b/filmes-main/filmes-desenho/style-desenho.css
@@ -11,9 +11,9 @@ h2 {
 
     h3 {font-size: 20px;color: rgb(0, 108, 231);}
 
-    img{width:200px; 
+    img{width:125px;height:200px; 
     border: 2px solid rgb(255, 0, 0);
-    border-radius: 11px;display: inline;margin: 10px;}
+    border-radius: 11px;display: inline;margin: 8px;}
 
     img:hover {transform: scale(1.1)}
 
