--- a/copio-so-nao-faço-igual/teste.css
+++ b/copio-so-nao-faço-igual/teste.css
@@ -1,9 +1,5 @@
 @charset "UTF-8";
-#branco {display: none;}
-button {background-color: black;width: 30px;
-    height: 30px; border-radius: 10px
-;padding-right: 50px;}
-#bolaB {width: 15px;height: 15px;background-color: rgb(73, 73, 73);
-border-radius: 50%;}
-#bolaP {width: 15px;height: 15px;background-color: rgb(73, 73, 73);
-position: absolute;right: 500px;top: 16px;border-radius: 50%;}
+h1 {text-align: center;}
+a {text-decoration: none;font-size: 20px;color: rgb(255, 255, 255);font-family: 'Courier New', Courier, monospace;
+}
+div {text-align: center;margin: 10px;}
