--- a/filmes-main/style.css
+++ b/filmes-main/style.css
@@ -13,16 +13,11 @@ span > p {position: relative;right: -600  ;}
 
     h3 {font-size: 20px;color: rgb(55, 100, 100);}
     .so {width: 70px;}
-    img {width: 125px;height: 200px;  border: 2px groove red; border-radius: 5px;margin:  5px;}
+    img {width: 118px;height: 200px;  border: 2px groove red; border-radius: 5px;margin:  5px;}
     img:hover {transform: scale(1.1)}
 
-
-
-    .seta-terror   {width: 120px;height: 120px;padding: 0px;border: 0px;}
-    .seta-ação     {width: 120px;height: 120px;padding: 0px;border: 0px;}
-    .seta-fantasia {width: 120px;height: 120px;padding: 0px;border: 0px;}
-    .seta-ficção   {width: 120px;height: 120px;padding: 0px;border: 0px;}
-  
+    .seta  {width: 120px;height: 120px;padding: 0px;border: 0px;}
+    
   header {color: #a76868; padding: 1px;color: rgb(255, 153, 0);background-color: rgb(0, 0, 0);}
   nav {padding: 10px;color: #242424;background-color: #383838; }
     a {text-decoration: none;color: #383838;}
@@ -30,15 +25,15 @@ span > p {position: relative;right: -600  ;}
   #menu {display:inline;padding: 10px;
     color: rgb(255, 255, 255);font-size: 18px
     ;margin: 0px;cursor: pointer;}
-  #sub-menu{ display: none;text-decoration: none;
-    padding-top: 10px; margin-left: 220px;} 
+  #sub-menu{ display: none;text-decoration: none; background-color: black;
+    padding-top: 10px; margin-left: 220px;position: absolute;border: 1px solid #383838;padding: 10px;} 
   #menu:hover {color: rgb(156, 173, 168);}
   #menu:hover > #sub-menu {display: block;}
   .de {color: white;}
 
   #atores {color: aliceblue;font-size: 18px;
     margin-left: 20px;cursor: pointer;padding: 10px;}
-  #atores-sub{display: none;margin-left: 330px;}
+  #atores-sub{display: none;margin-left: 330px;;position: absolute;border: 1px solid #383838;padding: 10px;}
  #atores:hover > #atores-sub {display: inline;}
 
     h3 { display:inline}
@@ -56,7 +51,10 @@ background-color: rgb(255, 255, 255);
 border-radius: 50%;}
 
 #bolaP {width: 15px;height: 15px;
-background-color: rgb(0, 0, 0);
+background-color: rgb(27, 27, 27);
 border-radius: 50%;}
 
 #preto {transform: rotate(180deg);}
+
+#voltaAOtopo {position: relative;right: -48%; behavior: smooth;transform: rotate(270deg);border: 0;
+width: 120px;height: 120px;}
