--- a/aumento de fe/biblia/style-biblia.css
+++ b/aumento de fe/biblia/style-biblia.css
@@ -1,2 +1,4 @@
 @charset "UTF-8";
-p {font-size: 20px;}
+* {font-family: Arial, Helvetica, sans-serif}
+a {font-size: 20px;
+    text-decoration: none;color: rgb(6, 158, 179);}
