--- a/copio-so-nao-faço-igual/abstract/abstract.css
+++ b/copio-so-nao-faço-igual/abstract/abstract.css
@@ -1,8 +1,20 @@
 @charset "UTF-8";
 body {margin: 0;}
 header {background-color: black;margin: 0;
-height: 100px;
+height: 80px;
 display: flex;justify-content: space-between;}
+
+#titulo {display: flex;justify-content: left;}
+.titulo {color: aliceblue; margin: 2px;
+font-size: 22px;display: flex;}
+.titulo:hover {text-decoration: underline;}
+
+#barra {font-size: 22px;color: #1a1a1a;}
+
+
+.icons {width: 28px;height: 28px;margin: 0;}
+
+h2 {margin: 0;}
 
 #principal {background-color: #dadbf1;margin: 0;
 text-align: center;height: 400px;
@@ -40,8 +52,11 @@ margin: 16px;}
 margin: 16px;}
 
 a {text-decoration: none;font-size: 19px;color: rgb(4, 138, 255);}
+.icon {width: 20px;height: 20px;position: relative;top: 6px;color: rgb(4, 138, 255);}
 footer {width: 100%;height: 200px;
 background-color: black;}
+
+code {font-size: 18px;}
 
 
 
