--- a/copio-so-nao-faço-igual/music/style.css
+++ b/copio-so-nao-faço-igual/music/style.css
@@ -16,10 +16,12 @@ font-size: 18px;margin: 0;}
 {display: flex;justify-content: space-around;
 background-color: rgb(98, 156, 231);width: 300px;
 border-radius: 10px;margin: 10px;}
+
 #comprar 
 {width: 350px;height: 30px;border: 0;
 border-radius: 10px;
-margin: 10px;background-color: rgb(0, 81, 255);}
+margin: 0px 10px 5px 10px;background-color: rgb(0, 81, 255);
+cursor: pointer;}
 #nao-quero {
 width: 350px;height: 30px;border: 0;
-border-radius: 10px;margin: 10px;}
+border-radius: 10px;margin: 10px;cursor: pointer;}
