--- a/copio-so-nao-faço-igual/teste.css
+++ b/copio-so-nao-faço-igual/teste.css
@@ -5,3 +5,24 @@ font-size: 20px;}
 img {width: 30px;height: 30px;}
 #normal:hover {transform: scale(1.2);}
 #curtido {display: none;}
+
+#vermelho{border-radius: 50%;animation: mudar 3s infinite;
+width:100px;height:100px;background-color: rgb(255, 0, 0);}
+
+#verde {
+width:100px;height:100px;background-color: rgb(0, 255, 0);}
+
+@keyframes mudar {
+    0% {right: 10%;}
+
+    1% {right: 12%}
+
+
+   
+
+    animation: mudar 3s infinite delay iteration-count direction fill-mode;
+   
+
+  
+
+}
