--- a/musica/musicas/gospel/valesca mayssa/style.css
+++ b/musica/musicas/gospel/valesca mayssa/style.css
@@ -1,28 +1,30 @@
 @charset "UTF-8";
 body {background-color: rgb(10, 10, 10);}
+header {height: 50px;background-color: rgb(0, 0, 0);}
 main {display: flex;justify-content: space-around;
 flex-wrap: wrap;}
-h2 {color: rgb(127, 197, 255);font-size: 30px;}
-h3 {color: rgb(127, 176, 241);font-size: 25px;}
+h2 {color: rgb(127, 197, 255);font-size: 30px;
+text-align: center;}
+h3 {color: rgb(127, 176, 241);font-size: 25px;
+text-align: center;}
 
 
 video {width: 60%;height: 61%;
 position: relative;right: 5%;
 border-radius: 10px; margin: 10px;
-background-image: url(capa\ arvore\ cortada.jpg);
-background-repeat: no-repeat;
-background-size: 100%;
+border: 1px solid rgb(0, 119, 255);
+
 
 }
 
 
 
 
-button {width: 80px;height: 40px;border: 0;
+a {padding: 10px; border: 0;text-decoration: none;
 border-radius: 10px;color: antiquewhite;
-background-color: black;
-position: relative;left: 30%;}
+background-color: rgb(0, 96, 206);margin: 10px;
+position: relative;left: 30%;top: 10px;}
 button:hover {cursor: pointer;color: rgb(189, 189, 189);}
 
-p {color: rgb(0, 110, 255);
+p {color: rgb(0, 110, 255);padding: 10px;
 font-size: 18px;display: none;}
