--- a/receitas/receitas.css
+++ b/receitas/receitas.css
@@ -19,3 +19,4 @@ header {padding: 14px ;background-color: darkorange;}
 justify-content: space-around;}
 
 #doce {display: flex;justify-content: space-around;}
+#resto {display: flex;justify-content: space-around;}
