--- a/musica/cantores/golpel/valesca mayssa/style.css
+++ b/musica/cantores/golpel/valesca mayssa/style.css
@@ -1,30 +1,10 @@
 @charset "UTF-8";
 body {background-color: rgb(10, 10, 10);}
 header {height: 50px;background-color: rgb(0, 0, 0);}
-main {display: flex;justify-content: space-around;
-flex-wrap: wrap;}
-h2 {color: rgb(127, 197, 255);font-size: 30px;
-text-align: center;}
-h3 {color: rgb(127, 176, 241);font-size: 25px;
-text-align: center;}
-
-
-video {width: 60%;height: 61%;
-position: relative;right: 5%;
-border-radius: 10px; margin: 10px;
-border: 1px solid rgb(0, 119, 255);
-
-
-}
 
 
 
 
-a {padding: 10px; border: 0;text-decoration: none;
-border-radius: 10px;color: antiquewhite;
-background-color: rgb(0, 96, 206);margin: 10px;
-position: relative;left: 30%;top: 10px;}
-button:hover {cursor: pointer;color: rgb(189, 189, 189);}
-
-p {color: rgb(0, 110, 255);padding: 10px;
-font-size: 18px;display: none;}
+a { border: 0;text-decoration: none;color: antiquewhite;
+margin: 10px;}
+a:hover {text-decoration: underline;color: #c0c0bf;}
