--- a/nova vida com cristo/style.css
+++ b/nova vida com cristo/style.css
@@ -1,8 +1,9 @@
 @charset "UTF-8";
-body {background-color: black;}
+body {background-color: black;margin: 0;}
 div {text-align: center;}
-img {width: 180px;}
-nav {width: 99%;height: 30px;display: flex;
+img {width: 185px;}
+nav {width: 100%;height: 30px;display: flex;
 justify-content: space-between;background-color: rgb(9, 85, 172);}
-a {text-decoration: none;color: white;font-size: 22px;}
+a {text-decoration: none;color: rgb(236, 236, 236);font-size: 22px;}
+a:hover {color:rgb(75, 124, 214)}
 .igreja {width:200px ;height: 200px;}
