--- a/copio-so-nao-faço-igual/teste.css
+++ b/copio-so-nao-faço-igual/teste.css
@@ -1,27 +1,11 @@
 @charset "UTF-8";
+body {background-color: black;}
 * {font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;}
 a {text-decoration: none;color: antiquewhite;
 font-size: 20px;}
-img {width: 30px;height: 30px;}
-#normal:hover {transform: scale(1.2);}
-#curtido {display: none;}
+img {width: 220px;height: 220px;border-radius: 10px;
+border: 1px solid red;}
+img:hover {transform: scale(1.2);cursor: pointer;transition: 1s;}
 
-#vermelho{border-radius: 50%;animation: mudar 3s infinite;
-width:100px;height:100px;background-color: rgb(255, 0, 0);}
-
-#verde {
-width:100px;height:100px;background-color: rgb(0, 255, 0);}
-
-@keyframes mudar {
-    0% {right: 10%;}
-
-    1% {right: 12%}
-
-
-   
-
-    
-
-  
-
-}
+span {display: flex;justify-content: space-around;flex-wrap: wrap;
+margin: 12px;}
