--- a/copio-so-nao-faço-igual/teste/teste.css
+++ b/copio-so-nao-faço-igual/teste/teste.css
@@ -16,3 +16,5 @@ li {list-style: none;}
 li:hover {color: #999}
 .imagem-d {width: 120px;height: 120px;border-radius: 10px;}
 .imagem-d:hover {transform: scale(1.1);}
+#circulo {width: 100px;height: 100px;background-color: chartreuse;
+border-radius: 50%;}
