--- a/tela-inicial.css
+++ b/tela-inicial.css
@@ -23,4 +23,4 @@ footer {background-color: rgb(20, 20, 20);margin: 0;padding: 10px;}
 h1 {color: white}
 h2 {color: white;}
 p {color: white;}
-h3 {color: white;}
+h3 {color: white;text-shadow: 0.5px 0.5px 0.5px black;}
