--- a/projetos/filmes-main/style.css
+++ b/projetos/filmes-main/style.css
@@ -1,10 +1,15 @@
 @charset  "UTF-8";
 body {background-color: rgb(0, 0, 0);}
 #h1Especial{font-size: 25px;}
+header {display: flex;}
 h1 { color: rgb(255, 0, 0);text-shadow:2px 2px rgb(116, 0, 0);font-size: 20px}
 header >h1 {display: inline;padding-right: 20px;}
-header > img {width: 100px;height: 100px;
-position: relative;top: 43px;}
+header > img {width: 40px;height: 40px;
+display: none;
+}
+header > a {margin-left: 10px;position: relative;
+top: 7px;font-size: 20px;color: bisque;}
+#aovivo {margin-left: 10px;}
 span > p {position: relative;right: -600  ;}
   h2 { display: inline-block; /* Torna o h2 em um bloco de linha com largura automática */
     padding: 10px; /* Adiciona espaçamento interno ao redor do texto */
@@ -24,20 +29,19 @@ span > p {position: relative;right: -600  ;}
     a {text-decoration: none;color: #383838;}
     a:hover {color: #242424;}
     p {display: inline;}
-  #menu {display:inline;padding: 10px;
+  #menu {display:inline;padding: 10px;width: 60px;
     color: rgb(255, 255, 255);font-size: 18px
-    ;margin: 0px;cursor: pointer;}
+    ;margin: 0px;cursor: pointer;margin-right: 10px;}
   #sub-menu{ display: none;text-decoration: none; background-color: black;
-    padding-top: 10px; margin-left: 220px;position: absolute;border: 1px solid #383838;padding: 10px;} 
+    padding-top: 10px; margin-left: 220px;position: absolute;border: 1px solid #383838;padding: 10px;
+  right: 78%;} 
   #menu:hover {color: rgb(156, 173, 168);}
   #menu:hover > #sub-menu {display: block;}
   #sub-menu:hover {color: #242424;}
   .de {color: white;}
 
-  #atores {color: aliceblue;font-size: 18px;
-    margin-left: 20px;cursor: pointer;padding: 10px;}
-  #atores-sub{display: none;margin-left: 330px;;position: absolute;border: 1px solid #383838;padding: 10px;}
- #atores:hover > #atores-sub {display: inline;}
+
+
 
 
 
