--- a/projetos/filmes-main/ao vivo/style.css
+++ b/projetos/filmes-main/ao vivo/style.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-body {margin: 0;}
+body {margin: 0;background-color: black;}
 h1 {text-align: center;}
 img {width: 200px;height: 300;border: 2px solid gold;}
 div {display: flex;justify-content: space-around;flex-wrap: wrap;}
