--- a/projetos/livraria-page/style.css
+++ b/projetos/livraria-page/style.css
@@ -1,17 +1,38 @@
 @charset "UTF-8";
-*{font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;}
 body {margin: 0;}
-header {display: flex;justify-content: space-between;
-background-color: rgb(37, 56, 3);}
-header > img {width: 100px;height: 100px;
-position: relative;top: -10px;}
-header > div {position: relative;top: 10px;}
-header > div > a {text-decoration: none;padding: 10px;
-background-color: rgb(38, 0, 255);color: aliceblue;
-border-radius: 10px;}
-header > div > img {width: 40px;height:40px;position: relative;top: 12px;}
-main > div {display: flex;justify-content: space-around;}
-main > div > a {text-decoration: none;color:white}
-input {width: 200px;}
-main > #divIMG > img {width: 195px;height: 300px;}
-#divIMG {display: flex;justify-content: space-evenly;flex-wrap: wrap;}
+header {background-color:#feda6367 ;}
+header > div {display: flex;justify-content:space-between;}
+#logo {width: 101px;}
+#divTG {display: flex;flex-direction: row;}
+#divTG > p {margin-left: 15px;font-size: 20px;
+color: purple;margin-top: 10px;}
+#div3 {position: relative;top: 10px;}
+#imgM {width: 30px;display: none;position: relative;top: 10px;}
+nav {display: none;}
+nav > div {display: flex;justify-content: center;}
+nav > div > a {text-decoration: none;font-size: 20px;
+color: rgb(190, 20, 167);margin-left: 30px;}
+nav > input {width: 400px;height: 30px;}
+header a {display: inline;
+position: relative;top: 2px;right: 10%;
+text-decoration: none;padding: 15px;
+background-color:rgb(39, 0, 102);
+border-radius: 12px;color: white;}
+section {margin: 10px;}
+section > input {width: 240px;height: 30px;margin-bottom: 10px;}
+section > a {text-decoration: none;font-size: 20px;
+color: rgb(190, 20, 167);}
+#divF {width: 260px;background-color:  rgb(57, 51, 68);
+border-radius: 12px;height: 150px;}
+#divAM {margin-top: 15px;margin-bottom: 10px;}
+#divAM > a {text-decoration: none;font-size: 20px;
+color: rgb(190, 20, 167)}
+#divF {text-align: center;}
+#divF  a {text-decoration: none;color: white;padding: 10px;
+background-color: purple;border-radius: 10px;}
+body > div {display: flex;}
+main {width: 100%;}
+main > div {border: 2px solid rgb(117, 117, 117);width: 98.9%;}
+main > div > a {text-decoration: none;font-size: 20px;}
+main div > a > div > img {width: 30px;}
+
