--- a/projetos/youtube/style.css
+++ b/projetos/youtube/style.css
@@ -17,7 +17,7 @@ border-right:  1px solid #333 ;
 border-bottom: 1px solid #333;
 width: 180px; height:380;
 }
-nav > a {text-decoration: none;color: white;font-size: 18px;
+nav > a {text-decoration: none;color: white;font-size: 18px;display: flex;
 }
 body > div {display: flex;width: 100%;}
 
@@ -25,3 +25,6 @@ main > div {display: flex;flex-wrap: wrap;}
 main > div > div {border: 1px solid #111;margin: 5px;border-radius: 10px;}
 div > div > a {text-decoration: none;color: white;}
 a > img {width: 290px ; height: 190px;border-radius: 10px 0px 0px}
+svg {width: 30px;}
+.oi {width: 10px;}
+
