--- a/projetos/starbucks/starbucks.css
+++ b/projetos/starbucks/starbucks.css
@@ -1,22 +1,8 @@
 @charset "UTF-8";
 body {margin: 0;background-color: black;}
-header {display: flex;justify-content: space-between;
-padding: 20px;}
-#logo {width: 60px;height: 60px;}
-#menu {width: 55px;height: 55px;}
-#sub-menu {display: none;}
-nav {display: flex; justify-content: space-between;width: 100%;
-position: relative;height: 50px;
-background-color: darkgreen;}
-h1 {margin: 0%;}
-h2 {margin: 0%;}
-a {text-decoration: none;color: white; padding: 3px 15px 3px 15px;
-border: 1px solid #111;border-radius: 10px;
-background-color: green;}
-nav > a {height: 18px;position: relative;top: 10px;}
-main > h2 {margin: 0px 0px 15px 0px;}
-main> p {margin: 30px;}
-main {margin: auto;width: 100%;height: 300px;text-align: center;
-background-image: url(imagems/fundo-main.png);
-background-repeat: no-repeat;
-background-size: 100%;}
+#logo {width: 106px;}
+header{display: flex;}
+header > div {
+display: flex;justify-content: space-between;width: 100%;}
+header > div > div > a {text-decoration: none;margin: 10px;
+font-size: 18px;color: #444;}
