--- a/projetos/trabalho/style.css
+++ b/projetos/trabalho/style.css
@@ -6,3 +6,4 @@ h1 {font-size: 60px;text-align: center;  color: white;}
 p {font-size: 40px; color: white;}
 h2 {color: wheat;}
 strong {color: blueviolet;}
+li {font-size: 40px}
