--- a/projetos/starbucks/starbucks.css
+++ b/projetos/starbucks/starbucks.css
@@ -1,8 +1,20 @@
 @charset "UTF-8";
-body {margin: 0;background-color: black;}
-#logo {width: 106px;}
-header{display: flex;}
-header > div {
+body {margin: 0;background-color:black;}
+#logo {width: 60px;height: 90px;}
+header {margin-top: 40px;}
+header > div {display: flex;width: 90%;position: relative;right: -4%;}
+header > div > div {
 display: flex;justify-content: space-between;width: 100%;}
-header > div > div > a {text-decoration: none;margin: 10px;
-font-size: 18px;color: #444;}
+header > div > div > div > a {text-decoration: none;margin: 10px;
+font-size: 18px;color: #fff;}
+header > div > div > div > a:hover {color: green;}
+svg {position: relative;top: -10px;}
+.banner {width:550px;height: 450px;}
+.divB {display: flex;justify-content: center;width: 100%;flex-wrap: wrap;margin-bottom: 20px;}
+h1 {text-align: center; position: relative;top: 100px;}
+p {text-align: center;font-size: 19px; position: relative;top: 100px;}
+.divT {background-color: #006241;width: 550px;height: 450px;position: relative;}
+.div2 {background-color: #a3029a;width: 550px;height: 450px;position: relative;}
+.div3 {background-color: #d6e342;width: 550px;height: 450px;position: relative;}
+.div4 {background-color: #97d8b1;width: 550px;height: 450px;position: relative;}
+#menuTP {display: none;}
