--- a/projetos/trabalho/style.css
+++ b/projetos/trabalho/style.css
@@ -1,10 +1,10 @@
 @charset "UTF-8";
 body {margin: 0;background-color: black;}
-#divIM {text-align: center;}
+.divIM {text-align: center;}
 img {width: 70%;height: 607px;}
 h1 {font-size: 60px;text-align: center;  color: white;}
 p {font-size: 40px; color: white;}
 h2 {color: wheat;}
 strong {color: blueviolet;}
-li {font-size: 40px}
+li {font-size: 40px;color: white;}
 b {color: green}
