--- a/projetos/trabalho/style.css
+++ b/projetos/trabalho/style.css
@@ -7,4 +7,5 @@ p {font-size: 40px; color: white;}
 h2 {color: wheat;}
 strong {color: blueviolet;}
 li {font-size: 40px;color: white;}
+ol {color: white;}
 b {color: green}
