--- a/projetos/filmes-main/ao vivo/style.css
+++ b/projetos/filmes-main/ao vivo/style.css
@@ -1,5 +1,29 @@
 @charset "UTF-8";
 body {margin: 0;background-color: black;}
-h1 {text-align: center;}
+h1 {text-align: center; color: white;}
+h2 {text-align: center;color: white;}
+p {text-align: center;font-size: 19px;}
 img {width: 200px;height: 300;border: 2px solid gold;}
 div {display: flex;justify-content: space-around;flex-wrap: wrap;}
+
+
+
+
+
+.estrela {
+    width: 100px;
+    height: 100px;
+    background-color: #444;
+    clip-path: polygon(
+        50% 0%, 
+        61% 35%, 
+        98% 35%, 
+        68% 57%, 
+        79% 91%, 
+        50% 70%, 
+        21% 91%, 
+        32% 57%, 
+        2% 35%, 
+        39% 35%
+    );
+}
