--- a/projetos/filmes-main/filme_comedia/style-comedia.css
+++ b/projetos/filmes-main/filme_comedia/style-comedia.css
@@ -14,3 +14,22 @@ h2 {
     border-radius: 2px;display: inline;margin: 7px;}
     img:hover {transform: scale(1.1)}
     main {text-align: center;height: 200px;}
+  div {display: flex;justify-content: center;}
+
+    .estrela {
+        width: 100px;
+        height: 100px;
+        background-color: #444;
+        clip-path: polygon(
+            50% 0%, 
+            61% 35%, 
+            98% 35%, 
+            68% 57%, 
+            79% 91%, 
+            50% 70%, 
+            21% 91%, 
+            32% 57%, 
+            2% 35%, 
+            39% 35%
+        );
+    }
