--- a/projetos/QUIZ'S/fin.css
+++ b/projetos/QUIZ'S/fin.css
@@ -46,6 +46,6 @@ img {width: 30px;height: 300px;}
 #r9  {display: none;}
 #r10  {display: none;}
 
-#proxima {display: flex;justify-content: space-around;border-radius: 10px;
-    width: 280px;height: 100px;background-color: rgb(0, 120, 201);}
-.icon {width: 30px;height: 30px;position: relative;top: 10px;}
+.proxima {display: flex;justify-content: center;border-radius: 10px;
+    width: 100%;height: 100px;background-color: rgb(0, 120, 201);}
+.icon {width: 30px;height: 30px;position: relative;top: 10px}
